# scaling-recipes

./: README.md  pyproject.toml
scaling_recipes/: datasets.py  logger.py  main.py  model.py  util.py
scaling_recipes/cli/conf/: base.yaml
slfm/: datasets.py  logger.py  loss.py  main.py  model.py  util.py
slfm/cli/conf/: base.yaml
