# Basic settings for a sample project

# Project information
[project]
name = "scaling-recipes"
description = "Scaling recipes for neural networks."
dynamic = ["version"]

authors = [{ name = "Vignesh Srinivasan", email = "vignesh.mssrinivasan@gmail.com" },]

dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "zuko",
    "pandas",
    "hydra-core", 
    "torch", 
    "torchvision",
    "ipython",
]

[tool.setuptools]
packages = ["scaling_recipes"]  # Specify only the package(s) you want

[project.scripts]
train = "scaling_recipes.main:train"
evaluate = "scaling_recipes.main:evaluate" 
train_and_evaluate = "scaling_recipes.main:train_and_evaluate"
sweep = "scaling_recipes.main:sweep_train_and_evaluate"
sweep_evaluate = "scaling_recipes.main:sweep_evaluate"